1. Implemented add new model api 2. Fixed crash while empty phone number 3.added  list_item_selecter and changes on bottom sheet on purchased fragment

--- a/app/src/main/res/layout/custom_bottom_view.xml
+++ b/app/src/main/res/layout/custom_bottom_view.xml
@@ -4,6 +4,7 @@
 
     <LinearLayout
         style="@style/zerowrap"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
