--- a/app/src/main/res/layout/item_purchased_fragment.xml
+++ b/app/src/main/res/layout/item_purchased_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -10,48 +10,52 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/layout_purchsed_item"
         style="@style/MatchWrap"
-        android:background="@drawable/list_ripple_effect"
+        android:background="@drawable/list_item_selector"
         android:minHeight="70dp"
         android:orientation="horizontal"
         android:weightSum="3">
+
         <LinearLayout
             style="@style/Zero_wrap"
-            android:orientation="vertical"
             android:layout_gravity="center"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/brand_imageview"
-                android:layout_gravity="center"
-                style="@style/m75w75"/>
+                style="@style/m75w75"
+                android:layout_gravity="center"/>
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_gravity="center"
             style="@style/Zero_wrap"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/product_image_imageview"
-                android:layout_gravity="center"
-                style="@style/m75w75"/>
+                style="@style/m75w75"
+                android:layout_gravity="center"/>
 
         </LinearLayout>
 
         <LinearLayout
-            android:gravity="center"
             style="@style/Zero_wrap"
-            android:layout_weight="1"
             android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:gravity="center"
             android:orientation="vertical"
             >
+
             <LinearLayout
                 style="@style/BothWrap"
                 android:gravity="start"
                 android:orientation="vertical">
+
                 <TextView
                     style="@style/BothWrap"
                     android:layout_marginTop="@dimen/margin_7"
