--- a/app/src/main/res/layout/fragment_warranty_registration.xml
+++ b/app/src/main/res/layout/fragment_warranty_registration.xml
@@ -13,22 +13,22 @@
             type="com.incon.connect.ui.warrantyregistration.WarrantyRegistrationFragment"/>
     </data>
 
-    <ScrollView
-        android:id="@+id/scrollview_user_info"
-        style="@style/BothMatch"
-        android:fadeScrollbars="false"
-        android:scrollbarSize="4dp"
-        android:scrollbarThumbVertical="@drawable/scrollbar"
-        android:scrollbars="vertical">
 
     <RelativeLayout
         android:background="@color/white"
         style="@style/BothMatch">
+        <ScrollView
+            android:id="@+id/scrollview_user_info"
+            style="@style/BothMatch"
+            android:fadeScrollbars="false"
+            android:scrollbarSize="4dp"
+            android:layout_marginBottom="100dp"
+            android:scrollbarThumbVertical="@drawable/scrollbar"
+            android:scrollbars="vertical">
 
 
         <RelativeLayout
-            style="@style/BothMatch"
-            android:layout_marginTop="@dimen/margin_10">
+            style="@style/BothMatch">
 
             <!-- modelno -->
             <com.incon.connect.custom.view.CustomTextInputLayout
@@ -53,6 +53,7 @@
                 android:id="@+id/input_layout_division"
                 style="@style/Register_TextInputLayout"
                 android:layout_below="@id/input_layout_model_number"
+                android:visibility="gone"
                 android:hint="@string/action_division"
                 app:errorEnabled="true"
                 app:fontName="fonts/OpenSans-Regular.ttf"
@@ -75,6 +76,7 @@
                 android:hint="@string/action_category"
                 android:layout_below="@id/input_layout_division"
                 app:errorEnabled="true"
+                android:visibility="gone"
                 app:fontName="fonts/OpenSans-Regular.ttf"
                 app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
@@ -92,6 +94,7 @@
                 android:id="@+id/input_layout_serial_no"
                 android:hint="@string/add_new__serial_no"
                 style="@style/Add_new_model_TextInputLayout"
+                android:visibility="gone"
                 android:layout_below="@id/input_layout_category"
                 app:errorEnabled="true"
                 app:fontName="fonts/OpenSans-Regular.ttf"
@@ -116,6 +119,7 @@
                 android:id="@+id/input_layout_batch_no"
                 android:hint="@string/add_new__batch_no"
                 style="@style/Add_new_model_TextInputLayout"
+                android:visibility="gone"
                 android:layout_below="@id/input_layout_serial_no"
                 app:errorEnabled="true"
                 app:fontName="fonts/OpenSans-Regular.ttf"
@@ -141,6 +145,7 @@
                 android:layout_below="@id/input_layout_batch_no"
                 android:hint="@string/add_new__price"
                 app:errorEnabled="true"
+                android:visibility="gone"
                 app:fontName="fonts/OpenSans-Regular.ttf"
                 app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
@@ -173,21 +178,22 @@
                 android:textColor="@color/tueo_theme"
                 android:textSize="@dimen/text_size_13"/>
 
-            <ImageView
-                android:id="@+id/ad_new_model_button"
-                android:layout_below="@id/button_submit"
-                style="@style/m50w50"
-                android:layout_marginLeft="@dimen/margin_280"
-                android:layout_marginTop="@dimen/margin_10"
-                android:onClick="@{() -> fragment.onNewModelClick()}"
-                app:srcCompat="@drawable/ic_im_add_new"/>
-
-
         </RelativeLayout>
+
+        </ScrollView>
+
+        <ImageView
+            android:id="@+id/ad_new_model_button"
+            android:layout_alignParentBottom="true"
+            style="@style/m50w50"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="@dimen/margin_280"
+            android:onClick="@{() -> fragment.onNewModelClick()}"
+            app:srcCompat="@drawable/ic_im_add_new"/>
+
 
     </RelativeLayout>
 
-    </ScrollView>
 
 
 </layout>
