1. Implemented add new model api 2. Fixed crash while empty phone number 3.added  list_item_selecter and changes on bottom sheet on purchased fragment 4 added invoice field on warrenty registation fragment

--- a/app/src/main/res/layout/fragment_scan_tab.xml
+++ b/app/src/main/res/layout/fragment_scan_tab.xml
@@ -55,7 +55,8 @@
             android:id="@+id/phone_number_edit_layout"
             style="@style/BothMatch"
             android:clickable="true"
-            android:visibility="gone">
+            android:visibility="gone"
+            >
 
 
             <TextView
