1.change functionality on buttom sheet.

--- a/app/src/main/res/layout/bottom_sheet_purchased.xml
+++ b/app/src/main/res/layout/bottom_sheet_purchased.xml
@@ -4,7 +4,9 @@
 
     <LinearLayout
         style="@style/MatchWrap"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="@dimen/margin_10"
+        android:paddingBottom="@dimen/margin_10" >
 
         <LinearLayout
             android:id="@+id/top_row"
