1.change functionality on buttom sheet. 2.changes on warrenty registation, new model and assign qrcode xml

--- a/app/src/main/res/layout/activity_update_store_profile.xml
+++ b/app/src/main/res/layout/activity_update_store_profile.xml
@@ -61,7 +61,7 @@
                 android:contentDescription="@string/app_name"
                 android:onClick="@{() -> upDateStoreProfileActivity.openCameraToUpload()}"
 
-                app:srcCompat="@drawable/ic_im_showroom"/>
+                app:srcCompat="@drawable/ic_showroom"/>
 
 
             <RelativeLayout
