--- a/app/src/main/res/layout/bottom_sheet_purchased.xml
+++ b/app/src/main/res/layout/bottom_sheet_purchased.xml
@@ -12,8 +12,7 @@
             android:id="@+id/top_row"
             style="@style/MatchWrap"
             android:orientation="horizontal"
-            android:visibility="gone"
-            >
+            android:visibility="gone">
 
         </LinearLayout>
 
