--- a/app/src/main/res/layout/fragment_product_scan.xml
+++ b/app/src/main/res/layout/fragment_product_scan.xml
@@ -47,7 +47,7 @@
                         style="@style/m35w35"
                         android:layout_gravity="center"
                         android:layout_weight="0.5"
-                        app:srcCompat="@drawable/ic_im_qrcode"/>
+                        app:srcCompat="@drawable/ic_qrcode"/>
 
                 </LinearLayout>
 
@@ -77,7 +77,7 @@
                         style="@style/m35w35"
                         android:layout_gravity="center"
                         android:layout_weight="0.5"
-                        app:srcCompat="@drawable/ic_im_manual_enter"/>
+                        app:srcCompat="@drawable/ic_manual_enter"/>
 
                 </LinearLayout>
             </LinearLayout>
