--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,7 +97,8 @@
                         app:errorEnabled="true"
                         app:fontName="fonts/OpenSans-Regular.ttf"
                         app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor"
-                        app:passwordToggleEnabled="true">
+                        app:passwordToggleEnabled="true"
+                        >
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/edittext_password"
