--- a/app/src/main/res/layout/dummy.xml
+++ b/app/src/main/res/layout/dummy.xml
@@ -23,7 +23,7 @@
             <android.support.v7.widget.AppCompatImageView
                 style="@style/BothMatch"
                 android:layout_margin="5dp"
-                app:srcCompat="@drawable/ic_im_showroom"/>
+                app:srcCompat="@drawable/ic_showroom"/>
 
         </LinearLayout>
 
@@ -35,7 +35,7 @@
             <android.support.v7.widget.AppCompatImageView
                 style="@style/BothMatch"
                 android:layout_margin="5dp"
-                app:srcCompat="@drawable/ic_im_showroom"
+                app:srcCompat="@drawable/ic_showroom"
                 />
 
         </LinearLayout>
