--- a/app/src/main/res/layout/fragment_add_new_model.xml
+++ b/app/src/main/res/layout/fragment_add_new_model.xml
@@ -34,28 +34,48 @@
                 android:orientation="vertical"
                 >
 
-                <!-- modelno -->
-                <com.incon.connect.custom.view.CustomTextInputLayout
-                    android:id="@+id/input_layout_model_number"
-                    style="@style/Add_new_model_TextInputLayout"
-                    android:hint="@string/add_new__model_no"
-                    app:errorEnabled="true"
-                    app:fontName="fonts/OpenSans-Regular.ttf"
-                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+                <RelativeLayout
+                    style="@style/BothMatch">
+                    <!-- modelno -->
+                    <com.incon.connect.custom.view.CustomTextInputLayout
+                        android:id="@+id/input_layout_model_number"
+                        style="@style/Add_new_model_TextInputLayout"
+                        android:hint="@string/add_new__model_no"
+                        android:layout_toLeftOf="@+id/im_barcode_model"
+                        app:errorEnabled="true"
+                        app:fontName="fonts/OpenSans-Regular.ttf"
+                        app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/edittext_model_number"
-                        style="@style/Add_new_model_TextInputEditText"
-                        android:focusable="true"
-                        android:imeOptions="actionNext"
-                        android:inputType="textCapWords"
-                        android:maxLength="@integer/character_limit_45"
-                        android:maxLines="1"
-                        android:tag="1"
-                        android:text="@={addNewModel.productModel}"
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edittext_model_number"
+                            style="@style/Add_new_model_TextInputEditText"
+                            android:focusable="true"
+                            android:imeOptions="actionNext"
+                            android:inputType="textCapWords"
+                            android:maxLength="@integer/character_limit_45"
+                            android:maxLines="1"
+                            android:tag="1"
+                            android:text="@={addNewModel.productModel}"
+                            />
+
+                    </com.incon.connect.custom.view.CustomTextInputLayout>
+                    <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/im_barcode_model"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="6dp"
+                        android:gravity="bottom"
+                        android:paddingTop="@dimen/margin_20"
+                        app:srcCompat="@drawable/ic_barcode"
                         />
 
-                </com.incon.connect.custom.view.CustomTextInputLayout>
+
+                </RelativeLayout>
+
+
+
 
                 <!-- category-->
                 <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
@@ -123,7 +143,7 @@
                 <!--price-->
                 <com.incon.connect.custom.view.CustomTextInputLayout
                     android:id="@+id/input_layout_price"
-                    style="@style/Add_new_model_TextInputLayout"
+                    style="@style/Register_TextInputLayout"
                     android:layout_below="@id/spinner_type"
                     android:hint="@string/add_new__price"
                     app:errorEnabled="true"
