--- a/app/src/main/res/layout/fragment_warranty_registration.xml
+++ b/app/src/main/res/layout/fragment_warranty_registration.xml
@@ -32,8 +32,9 @@
             <!-- modelno -->
             <com.incon.connect.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_model_number"
-                style="@style/Register_TextInputLayout"
+                style="@style/Warrenty_TextInputLayout"
                 android:hint="@string/action_modelno"
+                android:layout_toLeftOf="@+id/im_barcode"
                 app:errorEnabled="true"
                 app:fontName="fonts/OpenSans-Regular.ttf"
                 app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
@@ -46,13 +47,22 @@
                     android:text="@={warrantyRegistration.modelNumber}"
                     />
             </com.incon.connect.custom.view.CustomTextInputLayout>
-
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/im_barcode_model"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="6dp"
+                android:gravity="bottom"
+                android:paddingTop="@dimen/margin_20"
+                app:srcCompat="@drawable/ic_barcode"
+                />
             <!-- division-->
                   <com.incon.connect.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_division"
                 style="@style/Register_TextInputLayout"
                 android:layout_below="@id/input_layout_model_number"
-                android:visibility="gone"
                 android:hint="@string/action_division"
                 app:errorEnabled="true"
                 app:fontName="fonts/OpenSans-Regular.ttf"
@@ -75,7 +85,6 @@
                 android:hint="@string/action_category"
                 android:layout_below="@id/input_layout_division"
                 app:errorEnabled="true"
-                android:visibility="gone"
                 app:fontName="fonts/OpenSans-Regular.ttf"
                 app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
@@ -92,8 +101,8 @@
             <com.incon.connect.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_serial_no"
                 android:hint="@string/add_new__serial_no"
+                android:layout_toLeftOf="@+id/im_barcode"
                 style="@style/Add_new_model_TextInputLayout"
-                android:visibility="gone"
                 android:layout_below="@id/input_layout_category"
                 app:errorEnabled="true"
                 app:fontName="fonts/OpenSans-Regular.ttf"
@@ -110,15 +119,29 @@
                     android:maxLines="1"
                     android:tag="1"
                     />
+
             </com.incon.connect.custom.view.CustomTextInputLayout>
+
+            <android.support.v7.widget.AppCompatImageView
+                android:layout_below="@id/input_layout_category"
+                android:id="@+id/im_barcode"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="6dp"
+                android:gravity="bottom"
+                android:paddingTop="@dimen/margin_20"
+                app:srcCompat="@drawable/ic_barcode"
+                />
 
 
             <!-- batch no -->
             <com.incon.connect.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_batch_no"
                 android:hint="@string/add_new__batch_no"
+                android:layout_toLeftOf="@+id/im_barcode_batch"
                 style="@style/Add_new_model_TextInputLayout"
-                android:visibility="gone"
                 android:layout_below="@id/input_layout_serial_no"
                 app:errorEnabled="true"
                 app:fontName="fonts/OpenSans-Regular.ttf"
@@ -137,14 +160,26 @@
                     />
             </com.incon.connect.custom.view.CustomTextInputLayout>
 
+            <android.support.v7.widget.AppCompatImageView
+                android:layout_below="@id/input_layout_serial_no"
+                android:id="@+id/im_barcode_batch"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="6dp"
+                android:gravity="bottom"
+                android:paddingTop="@dimen/margin_20"
+                app:srcCompat="@drawable/ic_barcode"
+                />
+
             <!-- price -->
             <com.incon.connect.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_price"
-                style="@style/Add_new_model_TextInputLayout"
+                style="@style/Register_TextInputLayout"
                 android:layout_below="@id/input_layout_batch_no"
                 android:hint="@string/add_new__price"
                 app:errorEnabled="true"
-                android:visibility="gone"
                 app:fontName="fonts/OpenSans-Regular.ttf"
                 app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
@@ -166,11 +201,10 @@
             <!-- invoiceNumber -->
             <com.incon.connect.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_invoicenumber"
-                style="@style/Add_new_model_TextInputLayout"
+                style="@style/Register_TextInputLayout"
                 android:layout_below="@id/input_layout_price"
                 android:hint="@string/add_new__invoiceNumber"
                 app:errorEnabled="true"
-                android:visibility="gone"
                 app:fontName="fonts/OpenSans-Regular.ttf"
                 app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
@@ -215,7 +249,7 @@
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="@dimen/margin_280"
             android:onClick="@{() -> fragment.onNewModelClick()}"
-            app:srcCompat="@drawable/ic_im_add_new"/>
+            app:srcCompat="@drawable/ic_add_new"/>
 
 
 
