--- a/app/src/main/res/layout/view_verify_otp.xml
+++ b/app/src/main/res/layout/view_verify_otp.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="6dp"
             android:gravity="bottom"
             android:paddingTop="@dimen/margin_20"
-            app:srcCompat="@drawable/ic_im_return"
+            app:srcCompat="@drawable/ic_return"
             />
 
         <!-- verify title -->
