--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -320,7 +320,7 @@
     <style name="Add_new_model_TextInputLayout" parent="@style/MatchWrap">
         <!--<item name="android:layout_marginTop">5dp</item>-->
         <item name="android:layout_marginStart">38dp</item>
-        <item name="android:layout_marginEnd">39dp</item>
+       <!-- <item name="android:layout_marginEnd">10dp</item>-->
         <item name="android:textColorHint">@color/colorForgotPasswordHintText</item>
     </style>
     <style name="Add_new_model_TextInputEditText" parent="@style/MatchWrap">
@@ -328,6 +328,15 @@
         <item name="android:textColor">@color/colorForgotPasswordHintText</item>
         <item name="android:maxLines">1</item>
         <item name="android:inputType">text</item>
+    </style>
+
+    <!--warrenty -->
+
+    <style name="Warrenty_TextInputLayout" parent="@style/MatchWrap">
+        <!--<item name="android:layout_marginTop">5dp</item>-->
+        <item name="android:layout_marginStart">38dp</item>
+        <item name="android:layout_marginEnd">39dp</item>
+        <item name="android:textColorHint">@color/colorForgotPasswordHintText</item>
     </style>
 
     <!-- Register -->
