1. Added title for user scan

--- a/app/src/main/res/layout/activity_qrcode_barcodescan.xml
+++ b/app/src/main/res/layout/activity_qrcode_barcodescan.xml
@@ -21,9 +21,8 @@
             />
 
         <TextView
-            android:id="@+id/text_qrcode_titel"
+            android:id="@+id/text_qrcode_title"
             style="@style/scanner_titel"
-
             />
     </RelativeLayout>
 
