--- a/app/src/main/res/layout/bottom_sheet_purchased.xml
+++ b/app/src/main/res/layout/bottom_sheet_purchased.xml
@@ -10,7 +10,7 @@
 
         <LinearLayout
             android:id="@+id/top_row"
-            style="@style/MatchWrap"
+            style="@style/BothMatch"
             android:orientation="horizontal"
             android:visibility="gone">
 
@@ -18,7 +18,7 @@
 
         <LinearLayout
             android:id="@+id/bottom_row"
-            style="@style/MatchWrap"
+            style="@style/BothWrap"
             android:orientation="horizontal">
 
         </LinearLayout>
