--- a/app/src/main/res/layout/fragment_product_assign.xml
+++ b/app/src/main/res/layout/fragment_product_assign.xml
@@ -46,6 +46,7 @@
                         style="@style/Register_TextInputEditText"
                         android:maxLength="@integer/character_limit_100"
                         android:maxLines="1"
+                        android:tag="0"
                         android:text="@={assignQrCode.productName}"
                         />
 
@@ -54,7 +55,7 @@
 
                 <!--price-->
                 <com.incon.connect.custom.view.CustomTextInputLayout
-                    android:id="@+id/input_layout_price"
+                    android:id="@+id/input_layout_model_price"
                     style="@style/Register_TextInputLayout"
                     android:layout_below="@id/input_layout_model_number"
                     android:hint="@string/add_new__price"
@@ -63,7 +64,7 @@
                     app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/edittext_register_phone"
+                        android:id="@+id/edittext_model_price"
                         style="@style/Add_new_model_TextInputEditText"
                         android:focusable="true"
                         android:imeOptions="actionNext"
@@ -80,7 +81,7 @@
                     android:id="@+id/button_submit"
                     style="@style/w150_wrap"
                     fontPath="fonts/OpenSans-Bold.ttf"
-                    android:layout_below="@id/input_layout_price"
+                    android:layout_below="@id/input_layout_model_price"
                     android:layout_marginBottom="@dimen/margin_10"
                     android:layout_marginLeft="@dimen/margin_110"
                     android:layout_marginTop="@dimen/margin_10"
