--- a/app/src/main/res/layout/fragment_warranty_registration.xml
+++ b/app/src/main/res/layout/fragment_warranty_registration.xml
@@ -43,6 +43,7 @@
                         android:id="@+id/edittext_model_number"
                         style="@style/Register_TextInputEditText"
                         android:maxLength="@integer/character_limit_100"
+                        android:tag="0"
                         android:maxLines="1"
                         android:text="@={warrantyRegistration.modelNumber}"
                         />
@@ -143,7 +144,7 @@
                         android:inputType="textCapWords"
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
-                        android:tag="1"
+                        android:tag="2"
                         android:text="@={warrantyRegistration.batchNumber}"
                         />
                 </com.incon.connect.custom.view.CustomTextInputLayout>
@@ -169,14 +170,14 @@
                     app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/edittext_register_phone"
+                        android:id="@+id/edittext_price"
                         style="@style/Add_new_model_TextInputEditText"
                         android:focusable="true"
                         android:imeOptions="actionNext"
                         android:inputType="number"
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
-                        android:tag="1"
+                        android:tag="3"
                         android:text="@={warrantyRegistration.price}"
                         />
 
@@ -195,13 +196,13 @@
                     app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/edittext_register_invoicenumber"
+                        android:id="@+id/edittext_invoicenumber"
                         style="@style/Add_new_model_TextInputEditText"
                         android:focusable="true"
                         android:imeOptions="actionNext"
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
-                        android:tag="1"
+                        android:tag="4"
                         android:text="@={warrantyRegistration.invoiceNumber}"
                         />
 
