--- a/app/src/main/res/layout/fragment_add_new_model.xml
+++ b/app/src/main/res/layout/fragment_add_new_model.xml
@@ -143,6 +143,28 @@
                         />
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
+                <!--Notes-->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_notes"
+                    style="@style/Register_TextInputLayout"
+                    android:layout_below="@id/spinner_type"
+                    android:hint="@string/add_new_notes"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_notes"
+                        style="@style/Add_new_model_TextInputEditText"
+                        android:focusable="true"
+                        android:imeOptions="actionNext"
+                        android:maxLength="@integer/character_limit_45"
+                        android:maxLines="1"
+                        android:tag="1"
+                        android:text="@={addNewModel.notes}"
+                        />
+                </com.incon.connect.custom.view.CustomTextInputLayout>
+
                 <!--submit-->
                 <Button
                     android:id="@+id/button_submit"
