--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,10 @@
         <item name="android:splitMotionEvents">false</item>
     </style>
 
+    <style name="dialog_theme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <!-- Custom dialog animation -->
     <style name="DialogTheme">
         <item name="android:windowEnterAnimation">@anim/frag_enter</item>
