1. Added button click in scan tab screen

--- a/app/src/main/res/layout/fragment_scan_tab.xml
+++ b/app/src/main/res/layout/fragment_scan_tab.xml
@@ -43,12 +43,42 @@
                 android:layout_marginTop="@dimen/margin_60"
                 android:text="@string/action_or"/>
 
-            <TextView
-                android:id="@+id/text_mobilenumber"
-                style="@style/enter_mobilenumber"
+            <!--
+                        <TextView
+                            android:id="@+id/text_mobilenumber"
+                            style="@style/enter_mobilenumber"
+                            android:background="@drawable/bg_edittext"
+                            android:onClick="@{() -> scanning.onPhoneNumberClick()}"
+                            />-->
+
+            <!--phone number-->
+            <LinearLayout
+                style="@style/MatchWrap"
+                android:layout_marginLeft="@dimen/margin_30"
+                android:layout_marginRight="@dimen/margin_30"
                 android:background="@drawable/bg_edittext"
-                android:onClick="@{() -> scanning.onPhoneNumberClick()}"
-                />
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/edittext_mobile_number"
+                    style="@style/MatchWrap"
+                    android:layout_marginLeft="@dimen/margin_10"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:maxLines="@integer/character_limit_1"
+                    android:textColor="@color/black"/>
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/phone_number_done_iv"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:onClick="@{()->scanning.onDoneClick()}"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    app:srcCompat="@android:drawable/stat_sys_upload_done"/>
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <RelativeLayout
