1.added set title methode on all fragment classes 2.added discription fields on new model,assign qr code fragments

--- a/app/src/main/res/layout/fragment_warranty_registration.xml
+++ b/app/src/main/res/layout/fragment_warranty_registration.xml
@@ -28,6 +28,7 @@
 
 
             <RelativeLayout
+                android:layout_marginTop="@dimen/margin_30"
                 style="@style/BothMatch">
 
                 <!-- modelno -->
@@ -47,6 +48,30 @@
                         android:maxLines="1"
                         android:text="@={warrantyRegistration.modelNumber}"
                         />
+                </com.incon.connect.custom.view.CustomTextInputLayout>
+
+                <!-- Description -->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_description"
+                    style="@style/Register_TextInputLayout"
+                    android:layout_below="@id/input_layout_model_number"
+                    android:hint="@string/action_description"
+                    android:visibility="gone"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_description"
+                        style="@style/Add_new_model_TextInputEditText"
+                        android:focusable="true"
+                        android:imeOptions="actionNext"
+                        android:tag="1"
+                        android:scrollHorizontally="false"
+                        android:inputType="textMultiLine"
+                        android:text="@={warrantyRegistration.description}"
+                        />
+
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <!-- division-->
@@ -94,7 +119,7 @@
                 <com.incon.connect.custom.view.CustomTextInputLayout
                     android:id="@+id/input_layout_serial_no"
                     style="@style/Add_new_model_TextInputLayout"
-                    android:layout_below="@id/input_layout_model_number"
+                    android:layout_below="@id/input_layout_description"
                     android:layout_toLeftOf="@+id/im_barcode_serial_no"
                     android:hint="@string/add_new__serial_no"
                     android:visibility="gone"
@@ -119,7 +144,7 @@
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/im_barcode_serial_no"
                     style="@style/Warrenty_barcode"
-                    android:layout_below="@id/input_layout_model_number"
+                    android:layout_below="@id/input_layout_description"
                     app:srcCompat="@drawable/ic_barcode"
                     />
 
@@ -207,34 +232,13 @@
 
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
-                <!-- Description -->
-                <com.incon.connect.custom.view.CustomTextInputLayout
-                    android:id="@+id/input_layout_description"
-                    style="@style/Register_TextInputLayout"
-                    android:layout_below="@id/input_layout_invoicenumber"
-                    android:hint="@string/action_description"
-                    android:visibility="gone"
-                    app:errorEnabled="true"
-                    app:fontName="fonts/OpenSans-Regular.ttf"
-                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/edittext_description"
-                        style="@style/Add_new_model_TextInputEditText"
-                        android:focusable="true"
-                        android:imeOptions="actionNext"
-                        android:maxLength="@integer/character_limit_45"
-                        android:tag="1"
-                        android:text="@={warrantyRegistration.description}"
-                        />
-
-                </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <CheckBox
                     android:id="@+id/product_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/input_layout_description"
+                    android:layout_below="@id/input_layout_invoicenumber"
                     android:layout_centerHorizontal="true"
                     android:checked="true"
                     android:text="@string/action_product_status"
