--- a/app/src/main/res/layout/fragment_add_new_model.xml
+++ b/app/src/main/res/layout/fragment_add_new_model.xml
@@ -57,11 +57,34 @@
 
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
+                <!-- Description -->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_description"
+                    style="@style/Register_TextInputLayout"
+                    android:layout_below="@id/input_layout_model_number"
+                    android:hint="@string/action_description"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_description"
+                        style="@style/Add_new_model_TextInputEditText"
+                        android:focusable="true"
+                        android:imeOptions="actionNext"
+                        android:tag="1"
+                        android:scrollHorizontally="false"
+                        android:inputType="textMultiLine"
+                        android:text="@={addNewModel.description}"
+                        />
+
+                </com.incon.connect.custom.view.CustomTextInputLayout>
+
                 <!-- category-->
                 <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                     android:id="@+id/spinner_category"
                     style="@style/spinnerItemStyle"
-                    android:layout_below="@id/input_layout_model_number"
+                    android:layout_below="@id/input_layout_description"
                     android:layout_marginBottom="@dimen/margin_24"
                     android:focusable="true"
                     android:hint="@string/add_new__category"
