--- a/app/src/main/res/layout/fragment_product_assign.xml
+++ b/app/src/main/res/layout/fragment_product_assign.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="assignQrCode"
-            type="com.incon.connect.dto.asignqrcode.AssignQrCode"/>
+            type="com.incon.connect.dto.asignqrcode.AssignQrCode" />
 
         <variable
             name="productassignfragment"
-            type="com.incon.connect.ui.home.asignqrcode.fragment.ProductAssignFragment"/>
+            type="com.incon.connect.ui.home.asignqrcode.fragment.ProductAssignFragment" />
     </data>
 
 
@@ -28,8 +28,7 @@
 
             <RelativeLayout
                 style="@style/BothMatch"
-                android:layout_marginTop="30dp"
-                >
+                android:layout_marginTop="30dp">
 
                 <!-- modelno -->
                 <com.incon.connect.custom.view.CustomTextInputLayout
@@ -47,8 +46,28 @@
                         android:maxLength="@integer/character_limit_100"
                         android:maxLines="1"
                         android:tag="0"
-                        android:text="@={assignQrCode.productName}"
-                        />
+                        android:text="@={assignQrCode.productName}" />
+
+                </com.incon.connect.custom.view.CustomTextInputLayout>
+                <!-- Description -->
+                <com.incon.connect.custom.view.CustomTextInputLayout
+                    android:id="@+id/input_layout_description"
+                    style="@style/Register_TextInputLayout"
+                    android:layout_below="@id/input_layout_model_number"
+                    android:hint="@string/action_description"
+                    app:errorEnabled="true"
+                    app:fontName="fonts/OpenSans-Regular.ttf"
+                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edittext_description"
+                        style="@style/Add_new_model_TextInputEditText"
+                        android:focusable="true"
+                        android:imeOptions="actionNext"
+                        android:inputType="textMultiLine"
+                        android:scrollHorizontally="false"
+                        android:tag="1"
+                        android:text="@={assignQrCode.description}" />
 
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
@@ -57,7 +76,7 @@
                 <com.incon.connect.custom.view.CustomTextInputLayout
                     android:id="@+id/input_layout_model_price"
                     style="@style/Register_TextInputLayout"
-                    android:layout_below="@id/input_layout_model_number"
+                    android:layout_below="@id/input_layout_description"
                     android:hint="@string/add_new__price"
                     app:errorEnabled="true"
                     app:fontName="fonts/OpenSans-Regular.ttf"
@@ -72,8 +91,7 @@
                         android:maxLength="@integer/character_limit_45"
                         android:maxLines="1"
                         android:tag="1"
-                        android:text="@={assignQrCode.price}"
-                        />
+                        android:text="@={assignQrCode.price}" />
                 </com.incon.connect.custom.view.CustomTextInputLayout>
 
                 <!--submit-->
@@ -90,7 +108,7 @@
                     android:text="@string/add_new_submit"
                     android:textAllCaps="true"
                     android:textColor="@color/tueo_theme"
-                    android:textSize="@dimen/text_size_13"/>
+                    android:textSize="@dimen/text_size_13" />
 
             </RelativeLayout>
 
@@ -103,7 +121,7 @@
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="@dimen/margin_280"
             android:onClick="@{() -> productassignfragment.onNewModelClick()}"
-            app:srcCompat="@drawable/ic_add_new"/>
+            app:srcCompat="@drawable/ic_add_new" />
 
     </RelativeLayout>
 
